<resources>
    <string name="app_name">协同</string>
    <string name="action_settings">Settings</string>

    <!--抽屉栏-->
    <string name="working">工作</string>
    <string name="report">报表</string>
    <string name="cooperate">协同</string>
    <string name="setting">设置</string>
    <string name="user_name">用户名</string>

    <!--登录注册界面-->
    <string name="agree">同意 《协同办公服务协议》</string>
    <string name="remember">记住密码</string>
    <string name="forget">忘记密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="password_confirm"> 确认  </string>
    <string name="get_verify_code"> 获取验证码  </string>
    <string name="message_confirm_code">短信验证码  </string>
    <!-- 注册协议链接 -->
    <string name="register_agree_url">"http://www.baidu.com"</string>
</resources>
