<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorPrimary" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/login"
            android:textColor="@color/font_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/register"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:textColor="@color/font_color"
            android:textSize="20sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="25dp"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/login_phone"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/login_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:background="@null"
                    android:drawableLeft="@mipmap/iconfont_dianhua"
                    android:drawablePadding="10dp"
                    android:hint="手机号"
                    android:imeOptions="normal"
                    android:singleLine="true"
                    android:textColorHint="@color/gray_light"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/login_phone"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:drawableLeft="@mipmap/iconfont_mima"
                    android:drawablePadding="10dp"
                    android:hint="请输入登录密码"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColorHint="@color/gray_light"
                    android:textSize="14sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp" >

                <CheckBox
                    android:id="@+id/remember_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/remember"
                    android:textColor="@color/gray_light"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/login_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/forget"
                    android:textColor="@color/gray_light"
                    android:textSize="15sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/login_btn"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/font_color"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>